# air1

./: .env.example  .gitignore  BUGFIX_SUMMARY.md  CLAUDE.md  GEMINI.md  add_unique_constraint.sql  alembic.ini  check.sh  companies.txt  docker-compose.yml  example_linkedin_outreach.py  lint.sh  main.py  pyproject.toml  pytest.ini  start.py  yeet.py
air1/: __main__.py  app.py  config.py  config_test.py  conftest.py
air1/agents/: __init__.py
air1/api/: auth.py  auth_test.py  deps.py
air1/cli/: commands.py
air1/core/: logging.py
air1/db/: db.py  new_schema.sql  prisma_client.py  sql_loader.py
air1/workflows/: company_emails.py  connect_company_leads_by_headline.py  connect_manual_profiles.py  connect_with_company_members.py  connect_with_profile.py  enrich_companies.py  leadgen.py  linkedin_company_leads.py  linkedin_outreach.py  linkedin_outreach_single_profile.py  linkedin_profile_info.py  outreach_to_companies.py  outreach_to_saved_profiles.py  scrape_companies_from_jobs.py  scrape_company_leads.py  search_and_save_profiles.py  sec_edgar_ingest.py
alembic/: env.py
alembic/versions/: rename_company_columns.py  (+4 more)
chrome-extension/: README.md  content.js  generate_icons.py  manifest.json  popup.html  popup.js  styles.css
context/: API_DEVELOPMENT.md  ARCHITECTURE.md  COMPETITOR_VALLEY.md  CRAWLER_INDEXER_RESEARCH.md  ORIGAMI_AGENTS_DEEP_DIVE.md  SADIE_GTM_ANALYSIS.md  SEC_LINKEDIN_RESEARCH.md  account-api.md  admin-api.md  auth-api.md  prompt.md
prisma/: schema.prisma
scripts/: check_companies_no_website.py  check_company_names.py  check_formd_companies.py  enrich_all_startups.py  test_brandfetch.py  test_brandfetch_api.py  test_brandfetch_fund_names.py  test_brandfetch_startups.py  test_serper_enrichment.py
tests/: conftest.py
(+192 files in other folders)
