[project]
name = "air1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "fastapi>=0.121.0",
    "loguru>=0.7.2",
    "lxml>=6.0.2",
    "playwright>=1.55.0",
    "prisma>=0.15.0",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.6.0",
    "pytest>=9.0.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "rich>=14.2.0",
    "typer>=0.20.0",
    "uvicorn>=0.38.0",
]

[project.scripts]
air1 = "air1.__main__:main"

[tool.setuptools]
packages = ["air1"]

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "testcontainers[postgres]>=4.8.0",
    "faker>=30.0.0",
    "trio>=0.32.0",
    "ruff>=0.14.4",
]
